// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main.lua - lua-verify: main.lua 1`] = `
foo()

foo(one, two, three)

foo(one, two, this_one_is_really_long_okay_like_so_long_look_at_this_wow, three, four)

bar(67)(62)

foo(function()
  print("hi")
end)

foo("a", "b", function()
  print("hi!!!")
end)

foo("a", "b", "dkjfldsjfkldsjfjdslfjdskjfdsjkfdsjfjdsfjkdjfkdsfdjfjkdsjkfjdslflksdfjlk", function()
  print("hi!!!")
end)

foo(function()
  print("first");
end, function()
  print("second");
end)

foo({
  djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = "djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk",
  dsjfkdjslkfjdslkfjdslkfjldsfkdls = "347584375897438957348957438957349",
  [3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs,
}, "a")

foo({
  djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = "djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk",
  dsjfkdjslkfjdslkfjdslkfjldsfkdls = "347584375897438957348957438957349",
  [3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs,
}, "a", function()
  print("hello?")
end)

bar{ a }

bar"a"

bar[[ a ]]

bar[[
  a!!!
]]

bar'a'

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
foo()

foo(one, two, three)

foo(
	one,
	two,
	this_one_is_really_long_okay_like_so_long_look_at_this_wow,
	three,
	four
)

bar(67)(62)

foo(function()
	print("hi")
end)

foo("a", "b", function()
	print("hi!!!")
end)

foo(
	"a",
	"b",
	"dkjfldsjfkldsjfjdslfjdskjfdsjkfdsjfjdsfjkdjfkdsfdjfjkdsjkfjdslflksdfjlk",
	function()
		print("hi!!!")
	end
)

foo(
	function()
		print("first")
	end,
	function()
		print("second")
	end
)

foo(
	{
		djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = "djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk",
		dsjfkdjslkfjdslkfjdslkfjldsfkdls = "347584375897438957348957438957349",
		[3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs
	},
	"a"
)

foo(
	{
		djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = "djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk",
		dsjfkdjslkfjdslkfjdslkfjldsfkdls = "347584375897438957348957438957349",
		[3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs
	},
	"a",
	function()
		print("hello?")
	end
)

bar{ a }

bar"a"

bar[[ a ]]

bar[[
  a!!!
]]

bar"a"

`;

exports[`main.lua - lua-verify: main.lua 2`] = `
foo()

foo(one, two, three)

foo(one, two, this_one_is_really_long_okay_like_so_long_look_at_this_wow, three, four)

bar(67)(62)

foo(function()
  print("hi")
end)

foo("a", "b", function()
  print("hi!!!")
end)

foo("a", "b", "dkjfldsjfkldsjfjdslfjdskjfdsjkfdsjfjdsfjkdjfkdsfdjfjkdsjkfjdslflksdfjlk", function()
  print("hi!!!")
end)

foo(function()
  print("first");
end, function()
  print("second");
end)

foo({
  djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = "djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk",
  dsjfkdjslkfjdslkfjdslkfjldsfkdls = "347584375897438957348957438957349",
  [3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs,
}, "a")

foo({
  djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = "djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk",
  dsjfkdjslkfjdslkfjdslkfjldsfkdls = "347584375897438957348957438957349",
  [3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs,
}, "a", function()
  print("hello?")
end)

bar{ a }

bar"a"

bar[[ a ]]

bar[[
  a!!!
]]

bar'a'

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
foo()

foo(one, two, three)

foo(
	one,
	two,
	this_one_is_really_long_okay_like_so_long_look_at_this_wow,
	three,
	four
)

bar(67)(62)

foo(function()
	print('hi')
end)

foo('a', 'b', function()
	print('hi!!!')
end)

foo(
	'a',
	'b',
	'dkjfldsjfkldsjfjdslfjdskjfdsjkfdsjfjdsfjkdjfkdsfdjfjkdsjkfjdslflksdfjlk',
	function()
		print('hi!!!')
	end
)

foo(
	function()
		print('first')
	end,
	function()
		print('second')
	end
)

foo(
	{
		djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = 'djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk',
		dsjfkdjslkfjdslkfjdslkfjldsfkdls = '347584375897438957348957438957349',
		[3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs,
	},
	'a'
)

foo(
	{
		djfkdsjflkdjsfkljdsklfjsdlfklsdjfdsjf = 'djfkdsjkfldjslkfldskxjlksjdklsklfkjldsjflsdk',
		dsjfkdjslkfjdslkfjdslkfjldsfkdls = '347584375897438957348957438957349',
		[3475837598734.3274892] = dfjkldsjflkdsfkljdslkfs,
	},
	'a',
	function()
		print('hello?')
	end
)

bar{ a }

bar'a'

bar[[ a ]]

bar[[
  a!!!
]]

bar'a'

`;
